@startuml Diagrama de Clases

package "KnotStar" #DDDDDD {
    class NodeKnot {
        +knot
        +mov
        +difference
        +priority
        -successorsICreate()
        -successorsIUndo()
        -successorsI()
        -successorsIICreate()
        -successorsIIUndo()
        -successorsII()
        -successorsIII()
        +successors()
    }

    class PriorityQueueNodeKnot {
        -queue
        +empty
        +len
        +put()
        +get()
        +updateDifferences()
    }

    class DifferenceCache {
        -cache
        -_len
        -_calls
        +difference()
        +__len__()
    }

    circle "difference()"

    circle "areSameKnotsAStar()"
    circle "areSameKnotsAStar2()"
    "difference()" -up-* "areSameKnotsAStar()"
    "difference()" -up-* DifferenceCache

    DifferenceCache --* "areSameKnotsAStar2()"
    PriorityQueueNodeKnot --* "areSameKnotsAStar2()"
    PriorityQueueNodeKnot --* "areSameKnotsAStar()"
    NodeKnot -right-* PriorityQueueNodeKnot
}
    
@enduml
